# Windows-TextFont-Conveter

./: .gitignore  LICENSE  README.md  latest.json  package-lock.json  package.json  test_1000.js  test_chars.js
src/: app.js  index.html  styles.css  unicode-maps.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keyboard.rs  lib.rs  main.rs  settings.rs
