[package]
name = "font-converter"
version = "1.0.0"
description = "Unicode Font Converter"
edition = "2021"

[lib]
name = "font_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"

[dependencies.winapi]
version = "0.3"
features = ["winuser", "windef"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
